trying to fix click even on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -425,6 +425,7 @@ select {
   background: none;
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 #status-div {
